package task4.prog1;

public enum MaintenanceCategory {
    LOCAL_FOOD, DELIVERY_FOOD, ACCESSORIES;
}
