package task4.prog1;

public enum RoomStatus {
    UNDER_REPAIR, FREE, CLEANING, BUSY
}
